--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: frenchEconomy
 Type: Package
-Title: R-Shiny Dashboard Displaying Data From INSEE And Banque De France
+Title: R-Shiny Dashboard Displaying Data From INSEE
 Version: 0.1.0
 Authors@R: 
   c(person("Hadrien", "Leclerc", email = "leclerc.hadrien@gmail.com",
@@ -8,7 +8,7 @@ Authors@R:
     person("INSEE", role = "cph"))
 Author: Hadrien Leclerc [aut, cre], INSEE [cph]
 Maintainer: Hadrien Leclerc <leclerc.hadrien@gmail.com>
-Description: R-Shiny Dashboard Displaying Data From INSEE And Banque De France.
+Description: R-Shiny Dashboard Displaying Data From INSEE.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -30,7 +30,6 @@ Imports:
   RColorBrewer,
   ggthemes,
   insee,
-  rwebstat,
   png,
   grid
 Depends: R (>= 2.10)
